# Legobot

./: .bandit  .gitignore  .travis.yml  CHANGES  CHANGES.md  CommandLinePrinter.py  IRCConnector.py  LICENSE  Lego.py  Legobot.py  MANIFEST  MANIFEST.in  Message.py  README.md  VERSION  Vagrantfile  WeatherListener.py  bootstrap.sh  bumpversion.sh  config.ini  exampleBot.py  legoCron.py  ngircd.conf  pip-selfcheck.json  pyproject.toml  requirements-dev.txt  requirements.txt  scratchpaper.py  setup.cfg  setup.py  testbot.py
.github/workflows/: python-deploy.yaml  python-test.yaml
Legobot/: Chatbot.py  Lego.py  LegoError.py  Message.py  StorageInterface.py  Utilities.py  __init__.py  __main__.py  chatbot_schema.yaml  legoCron.py  scratchpaper.py  unittests.py
Legobot/Connectors/: Discord.py  HTTP.py  IRC.py  Slack.py
Legobot/LegoTests/: test_TestingConnector.py
Legobot/Legos/: BingImageSearch.py  CommandLinePrinter.py  Commendations.py  Help.py  IRCConnector.py  Msync.py  PrintTips.py  Roll.py  TestingConnector.py  Tip.py  WeatherListener.py  WikipediaTopFinder.py  XKCD.py  __init__.py
Legobot/Storage/: Local.py
Legos/: BingImageSearch.py  CommandLinePrinter.py  Commendations.py  Help.py  IRCConnector.py  PrintTips.py  Roll.py  Tip.py  WeatherListener.py  WikipediaTopFinder.py  XKCD.py
Source/: Lego.py  Legobot.py  Message.py
Test/: test_Chatbot.py  test_IRC.py  test_Lego.py  test_Message.py
docs/: BASICS.md  intro.md  writing-a-lego.md
docs/connectors/: slack.md
examples/: Legobot.py  chatbot_class_example.py  chatbot_config.yaml  config.ini  config.ini.example  examplebot.py  exmaplebot.py
local/: factoids.py
