[tool.poetry]
name = "legobot"
version = "1.3.6"
description = "A framework for creating interactive chatbots on various protocols"
authors = ["Kevin McCabe <kmccabe@example.com>", "Bren Briggs <brenbro-briggins@example.com>", "Drew Bronson <donald.andrew.bronson@gmail.com>", "Drew Pearce <bob-the-builder@example.com>"]
license = "GPLv2"

[tool.poetry.dependencies]
python = "^3.6"
irc = "^17.0"
jmespath = "^0.10.0"
jsonschema = "^3.2.0"
pykka = "^1.2.1"
requests = "^2.21"
slackclient = "^1.3.1"
websocket-client = "^0.54.0"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
flake8 = "^3.8.4"
mock = "^4.0.2"
pytest = "^6.1.1"
hacking = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
