[metadata]
name = Legobot
version = 1.3.6
author = Kevin McCabe, Bren Briggs, and Drew Bronson, Drew Pearce
url = https://github.com/bbriggs/Legobot
description = A framework for creating interactive chatbots on various protocols
classifiers = 
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable

[options]
python_requires = >= 3.6
install_requires = 
    irc==17.0
    jmespath==0.10.0
    jsonschema==3.2.0
    pykka==1.2.1
    requests==2.31.0
    slackclient==1.3.1
    websocket-client==0.54.0
packages = find:
py_modules = 
    Legobot
include_package_data = true

[options.packages.find]
exclude =
    contrib
    docs
